<resources>
    <string name="app_name">AndroidPlanowanieWycieczek</string>
    <string name="title_home">Główna</string>
    <string name="title_notifications">Powiadomienia</string>
    <string name="title_login">Logowanie</string> />
    <string name="title_register">Rejestracja</string> />
    <string name="data">Data:</string>
    <string name="title_first_page">Strona Główna</string> />
    <string name="settings">Ustawienia</string> />
    <string name="title_settings">Ustawienia</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="from">Skąd</string>
    <string name="to">Dokąd</string>
    <string name="add_trip">DODAJ WYCIECZKĘ</string>
    <string name="stats">Statystyki:</string>
    <string name="planned_trips">Twoje zaplanowane wycieczki</string>
    <string name="cel_wycieczki">Cel wycieczki</string>
    <string name="data_wycieczki">Data wycieczki</string>
    <string name="ranking_twoich_wycieczek">Ranking Twoich wycieczek</string>
    <string name="wkrotce_zobaczysz_tutaj_statystyki">Wkrótce zobaczysz tutaj statystyki!</string>
    <string name="synchronizacja_wycieczek">Synchronizacja wycieczek</string>
    <string name="wkrotce_bedzie_mozna_synchronizowac_wycieczki">Wkrótce będzie można\n synchronizować wycieczki!</string>
    <string name="odzyskiwanie_hasla">Odzyskiwanie\nhasła</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika</string>
    <string name="date">Data</string>
    <string name="nowe_haslo">Nowe hasło</string>
    <string name="powtorz_nowe_haslo">Powtórz nowe hasło</string>
    <string name="zresetuj_haslo">ZRESETUJ HASŁO</string>
    <string name="hej_xyz">Hej, XYZ</string>
    <string name="co_planujesz">\nCo planujesz?</string>
    <string name="zaplanuj_wycieczke">Zaplanuj\nwycieczkę</string>
    <string name="zaplanowane_wycieczki">Zaplanowane\nwycieczki</string>
    <string name="ranking">Ranking</string>
    <string name="zsynachronizuj_wycieczki">Zsynachronizuj\nwycieczkę</string>
    <string name="twoje_zaplanowane_wycieczki">Twoje zaplanowane wycieczki</string>
    <string name="tutaj_pokaza_sie_zaplanowane_wycieczki">Tutaj pokażą się\nzaplanowane wycieczki!</string>
    <string name="logowanie">Logowanie</string>
    <string name="nazwa_uzytkownika2">Nazwa użytkownika</string>
    <string name="haslo">Hasło</string>
    <string name="nie_jestem_robotem">Nie jestem robotem.</string>
    <string name="zapomniales_hasla">Zapomniałeś hasła?</string>
    <string name="zaloguj_sie">ZALOGUJ SIĘ</string>
    <string name="nie_masz_konta_zarejestruj_sie">Nie masz konta? Zarejestruj się!</string>
    <string name="powiadmienia">Powiadmienia</string>
    <string name="ustaw_powiadomienie">Ustaw powiadomienie</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="nazwa_uzytkownika3">Nazwa użytkownika</string>
    <string name="haslo2">Hasło</string>
    <string name="zarejestruj_sie">ZAREJESTRUJ SIĘ</string>
    <string name="masz_konto_zaloguj_sie">Masz konto? Zaloguj się!</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zaloguj_sie1">Zaloguj się</string>
    <string name="zarejestruj_sie1">Zarejestruj się</string>
    <string name="zmie_haslo1">Zmień hasło</string>
    <string name="zmien_motyw">Zmień motyw</string>
    <string name="zmien_jezyk">Zmień język</string>
    <string name="wyloguj_sie">Wyloguj się</string>
    <string name="ustawienia2">Ustawnienia</string>
    <string name="powiadmienia2">Powiadomienia</string>
    <string name="details">Szczegóły</string>
    <string name="synch">Wybierz urządzenie do synchronizacji</string>
    <string name="ranking_title_text">Twoje najdłuższe wycieczki</string>
    <string name="ranking_body_text">Ranking utworzony na podstawie długości wycieczki w km</string>
    <string name="dialog_choose_synch">Wybierz wycieczkę do przesłania</string>
    <string name="ok">Ok</string>
    <string name="cancel">Wycofaj</string>
    <string name="haslo3">Powtórz hasło</string>
    <string name="nazwa_uzytkownika5">Nazwisko</string>
    <string name="nazwa_uzytkownika4">Imię</string>
    <string name="email">Email</string>
    <string name="save_trip">Zapisz</string>
    />
</resources>