<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidplanowaniewycieczek.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.androidplanowaniewycieczek.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
    <action
        android:id="@+id/action_settings_to_login"
        app:destination="@id/navigation_login" />
    <action
        android:id="@+id/action_settings_to_register"
        app:destination="@id/navigation_register" />
    <action
        android:id="@+id/action_settings_to_forgotpassword"
        app:destination="@id/navigation_forgotpassword" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.androidplanowaniewycieczek.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.androidplanowaniewycieczek.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_login_to_forgotpassword"
            app:destination="@id/navigation_forgotpassword"
            />


        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register"
            />
    </fragment>
    <fragment
        android:id="@id/navigation_register"
        android:name="com.example.androidplanowaniewycieczek.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />
    <action
        android:id="@+id/action_register_to_home"
        app:destination="@id/navigation_home" />
    <action
        android:id="@+id/action_register_to_login"
        app:destination="@id/navigation_login"/>
    <fragment
        android:id="@+id/navigation_forgotpassword"
        android:name="com.example.androidplanowaniewycieczek.ui.login.ForgotPasswordFragment"/>
        <action
            android:id="@+id/action_forgotpassword_to_login"
            app:destination="@id/navigation_login"
            />
</navigation>